--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@
 *.css.map
 *.sass.map
 *.scss.map
+node_modules
+
+.hintrc
+
+.stylelintrc.json
+
+package-lock.json
+
+test.html
+
+.github/
+
+.vscode/
